Added login + mongoDB connection

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,7 @@
 <% include ../parts/header.ejs %>
     <article class="home">
         <header><h1>Home</h1></header>
-        <a href="/login">Login</a>
+        <a href="/auth/facebook">Login with facebook</a>
     </article>
 <% include ../parts/footer.ejs %>    
     
