--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,6 +1,29 @@
 <% include ../parts/header.ejs %>
     <article class="login">
         <header><h1>Login</h1></header>
-        <a href="/">Login</a>
+
+	<!-- show any messages that come back with authentication -->
+        <% if (message.length > 0) { %>
+            <div><%= message %></div>
+        <% } %>
+
+        <!-- LOGIN FORM -->
+        <form action="/login" method="post">
+            <div class="form-group">
+                <label>Email</label>
+                <input type="text" name="email">
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" name="password">
+            </div>
+
+            <button type="submit">Login</button>
+        </form>
+
+        <hr>
+
+        <p>Need an account? <a href="/signup">Signup</a></p>
+        <p>Or go <a href="/">home</a>.</p>
     </article>
 <% include ../parts/footer.ejs %>
