--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,29 +1,37 @@
 <% include ../parts/header.ejs %>
-    <article class="login">
-        <header><h1>Login</h1></header>
+    <div class="container">
+<div class="col-sm-6 col-sm-offset-3">
 
-	<!-- show any messages that come back with authentication -->
-        <% if (message.length > 0) { %>
-            <div><%= message %></div>
-        <% } %>
+    <h1><span class="fa fa-sign-in"></span> Login</h1>
 
-        <!-- LOGIN FORM -->
-        <form action="/login" method="post">
-            <div class="form-group">
-                <label>Email</label>
-                <input type="text" name="email">
-            </div>
-            <div class="form-group">
-                <label>Password</label>
-                <input type="password" name="password">
-            </div>
+    <% if (message.length > 0) { %>
+        <div class="alert alert-danger"><%= message %></div>
+    <% } %>
 
-            <button type="submit">Login</button>
-        </form>
+    <!-- LOGIN FORM -->
+    <form action="/login" method="post">
+        <div class="form-group">
+            <label>Email</label>
+            <input type="text" class="form-control" name="email">
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" name="password">
+        </div>
 
-        <hr>
+        <button type="submit" class="btn btn-warning btn-lg">Login</button>
+    </form>
 
-        <p>Need an account? <a href="/signup">Signup</a></p>
-        <p>Or go <a href="/">home</a>.</p>
-    </article>
+    <hr>
+
+    <p>Need an account? <a href="/signup">Signup</a></p>
+    <p>Or go <a href="/">home</a>.</p>
+
+    <div class="text-center">
+        <p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
+        <p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
+    </div>
+
+</div>
+</div>
 <% include ../parts/footer.ejs %>
