--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -1,27 +1,45 @@
-<% include ../parts/header.ejs %>
-    <h1><span></span>Signup</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Node.js Getting Started on Heroku</title>
+        <link rel="stylesheet" type="text/css" href="/css/screen.css" />
+    </head>
+    <body>
+        <header><h1>part-E-wallet</h1></header>
+    <div class="container">
+    <div class="col-sm-6 col-sm-offset-3">
 
-	<!-- show any messages that come back with authentication -->
-	<% if (message.length > 0) { %>
-		<div><%= message %></div>
-	<% } %>
+    <h1><span class="fa fa-sign-in"></span> Signup</h1>
 
-	<!-- LOGIN FORM -->
-	<form action="/signup" method="post">
-		<div class="form-group">
-			<label>Email</label>
-			<input type="text" name="email">
-		</div>
-		<div class="form-group">
-			<label>Password</label>
-			<input type="password" name="password">
-		</div>
+    <% if (message.length > 0) { %>
+        <div class="alert alert-danger"><%= message %></div>
+    <% } %>
 
-		<button type="submit">Signup</button>
-	</form>
+    <!-- LOGIN FORM -->
+    <form action="/signup" method="post">
+        <div class="form-group">
+            <label>Email</label>
+            <input type="text" class="form-control" name="email">
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" name="password">
+        </div>
 
-	<hr>
+        <button type="submit" class="btn btn-warning btn-lg">Signup</button>
+    </form>
 
-	<p>Already have an account? <a href="/login">Login</a></p>
-	<p>Or go <a href="/">home</a>.</p>
-<% include ../parts/footer.ejs %>
+    <hr>
+
+    <p>Already have an account? <a href="/login">Login</a></p>
+    <p>Or go <a href="/">home</a>.</p>
+
+    <div class="text-center">
+        <p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
+        <p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
+    </div>
+
+</div>
+</div>
+    </body>
+</html>
