--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Node.js Getting Started on Heroku</title>
-        <link rel="stylesheet" type="text/css" href="/css/screen.css" />
-    </head>
-    <body>
-        <header><h1>part-E-wallet</h1></header>
-            <div class="container">
-
-    <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> Node Authentication</h1>
-
+<% include ../parts/header.ejs %>
+    <article class="container">
+        <header><h1>Welcome</h1></header>
         <p>Login or Register with:</p>
-
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
-        <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
-        <a href="/auth/twitter" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
-        <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google+</a>
-    </div>
-
-    <div class="text-center">
-        <p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
-        <p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
-    </div>
-
-</div>
-    </body>
-</html>    
+        <a href="/login">Login</a>
+        <a href="/signup">Register</a>
+    </article>
+<% include ../parts/header.ejs %>    
