--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,37 +1,21 @@
 <% include ../parts/header.ejs %>
-    <div class="container">
-<div class="col-sm-6 col-sm-offset-3">
+    <article class="container">
+        <header><h1>Login</h1></header>
 
-    <h1><span class="fa fa-sign-in"></span> Login</h1>
+        <% if (message.length > 0) { %>
+            <p>init message</p>
+            <div><%= message %></div>
+        <% } %>
 
-    <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
-    <% } %>
-
-    <!-- LOGIN FORM -->
-    <form action="/login" method="post">
-        <div class="form-group">
+        <form action="/login" method="post">
             <label>Email</label>
-            <input type="text" class="form-control" name="email">
-        </div>
-        <div class="form-group">
+            <input type="text" name="email">
             <label>Password</label>
-            <input type="password" class="form-control" name="password">
-        </div>
+            <input type="password" name="password">
+            <button type="submit">Login</button>
+        </form>
 
-        <button type="submit" class="btn btn-warning btn-lg">Login</button>
-    </form>
-
-    <hr>
-
-    <p>Need an account? <a href="/signup">Signup</a></p>
-    <p>Or go <a href="/">home</a>.</p>
-
-    <div class="text-center">
-        <p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
-        <p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
-    </div>
-
-</div>
-</div>
+        <p>Need an account? <a href="/signup">Signup</a></p>
+        <p>Or go <a href="/">home</a>.</p>
+    </article>
 <% include ../parts/footer.ejs %>
