--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,13 +1,9 @@
 <% include ../parts/header.ejs %>
-    <a href="/logout">Logout</a>
-
-
-	<!-- LOCAL INFORMATION -->
-	<h3><span></span> Local</h3>
-
-	<p>
-		<strong>id</strong>: <%= user._id %><br>
-		<strong>email</strong>: <%= user.local.email %><br>
-		<strong>password</strong>: <%= user.local.password %>
-	</p>
+    <article class="profile">
+        <a href="/logout">Logout</a>
+        <header><h3>Local</h3></header>
+        <p><strong>id</strong>: <%= user._id %></p>
+        <p><strong>email</strong>: <%= user.local.email %></p>
+        <p><strong>password</strong>: <%= user.local.password %></p>
+    </article>  
 <% include ../parts/footer.ejs %>
