--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,4 +5,4 @@
         <a href="/login">Login</a>
         <a href="/signup">Register</a>
     </article>
-<% include ../parts/header.ejs %>    
+<% include ../parts/footer.ejs %>    
