Clean-up, update. Tried to add events using MongoDB and pretty much failed, so setup local saving (a todo) to json

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,6 +1,6 @@
 <% include ../parts/header.ejs %>
+<% include ../parts/nav.ejs %>
     <article class="profile">
-        <a href="/logout">Logout</a>
         <header><h3>Local</h3></header>
         <p><strong>id</strong>: <%= user._id %></p>
         <p><strong>email</strong>: <%= user.local.email %></p>
