--- a/views/pages/newevent.ejs
+++ b/views/pages/newevent.ejs
@@ -4,8 +4,8 @@
        <nav>
             <ul>
                 <li><a href="/newevent" class="active">Create a new event</a></li>
-                <li><a href="/events/:<%= user._id %>/attending">Attending</a></li>
-                <li><a href="/events/:<%= user._id %>/organizing">Organizing</a></li>
+                <li><a href="/myevents/:<%= user._id %>/attending">Attending</a></li>
+                <li><a href="/myevents/:<%= user._id %>/organizing">Organizing</a></li>
             </ul>
         </nav>
         <header><h3>Create new event</h3></header>
